[gd_scene load_steps=25 format=3 uid="uid://co3biarax0yt4"]

[ext_resource type="Script" uid="uid://bmo7fhcewalo2" path="res://game_characters_scenes/allies/data/resource_provider/data/chest/data/wooden_chest/wooden_chest.gd" id="1_ah1ba"]
[ext_resource type="PackedScene" uid="uid://c0gkj1gflhpbp" path="res://game_characters_scenes/allies/models/upgrade_popup/upgrade_popup.tscn" id="2_epg0r"]
[ext_resource type="Script" uid="uid://bpfbritys5raj" path="res://game_characters_scenes/allies/data/resource_provider/models/state_machine_resource_provider/state_machine_resource_provider.gd" id="2_p5bas"]
[ext_resource type="Texture2D" uid="uid://cto61eke7joyb" path="res://game_characters_scenes/assets/circle_shadow.png" id="3_pspge"]
[ext_resource type="Texture2D" uid="uid://blnwb63jln06g" path="res://game_characters_scenes/allies/data/resource_provider/data/chest/data/wooden_chest/assets/level_2.png" id="4_fq48q"]
[ext_resource type="Texture2D" uid="uid://5xg73u1xoy12" path="res://game_characters_scenes/assets/circle_particle.png" id="5_b4i84"]
[ext_resource type="Texture2D" uid="uid://jdulueb7gowt" path="res://game_characters_scenes/assets/dust_particle.png" id="6_hl5cj"]
[ext_resource type="Texture2D" uid="uid://q5ifosgjvma5" path="res://game_characters_scenes/assets/gun_light.png" id="7_uu5hv"]

[sub_resource type="Curve" id="Curve_m2yvq"]
_limits = [0.0, 0.3, 0.0, 1.0]
_data = [Vector2(0, 0.0406288), 0.0, 0.0, 0, 0, Vector2(0.48318, 0.3), 0.0, 0.0, 0, 0, Vector2(0.993884, 0.0901451), -0.636947, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_jppvw"]
offsets = PackedFloat32Array(0, 0.204013, 0.712375, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 0.94902, 0.980392, 0.87451, 1, 0.853713, 0.289824, 3.17663e-05, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0gq5y"]
size = Vector2(51, 187)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4i6t7"]
size = Vector2(38, 65)

[sub_resource type="Animation" id="Animation_o0wg1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Textures/Down/Top:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-82, -77.6513)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Textures/Down/Top:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Textures/Down/Top:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(187.145, 2.94247, 193.427, 165.271)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Textures/Down:region_rect")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(4.22964, 34.0001, 168.704, 147.491)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Textures/Down/Top:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Shadow:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Shadow:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.23684, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("SpawnLight:energy")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("SpawnLight:texture_scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.3]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Textures:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 49)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Textures:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_mcjt5"]
resource_name = "_death"
length = 2.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Textures/Down:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.25, 0.45, 0.55, 0.65, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-1, -28), Vector2(-50, -45), Vector2(-75, 20), Vector2(-75, 18), Vector2(-75, 20), Vector2(-75, 18)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Textures/Down:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.45),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -1.39626]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Textures/Down/Top:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.533333, 0.666667, 0.866667, 1.36667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.763582, -1.34216, -1.23918, -1.33042]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DustParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.35),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Textures:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.35, 1.55, 1.75, 1.95, 2.15, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.47451), Color(1, 1, 1, 1), Color(1, 1, 1, 0.47451), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Shadow:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1.75, 2.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("DustParticles:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-194, 63)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Textures:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.1, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 49), Vector2(-41, -15)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Textures/Down/Top:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.1, 0.366667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-82, -77.6513), Vector2(-86.695, -75.845), Vector2(-75.8212, -55.6459)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Textures:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1.2), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_5023s"]
resource_name = "_giving_coin"
length = 4.0
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Textures/Down:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.4, 0.8, 1.1, 3.02, 3.16, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.9), Vector2(1, 1.05), Vector2(1, 1), Vector2(1, 1), Vector2(1, 0.9), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Textures/Down/Top:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 0.55, 0.56, 0.92, 1.31, 1.71, 2.14, 2.5, 2.86, 3.02, 3.2, 3.31, 3.43),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.349066, 0.0, -0.0349066, 0.0, -0.0349066, 0.0, -0.0349066, 0.0, -0.349066, 0.0, -0.20496, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Textures/Down/Top:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.55, 0.56, 3.3, 3.32, 3.41),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-82, -77.6513), Vector2(-82, -77.6513), Vector2(-103.715, -86.957), Vector2(-86.47, -88.01), Vector2(-86.47, -88.01), Vector2(-89, -63), Vector2(-82, -77.6513)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Textures/Down/CPUParticles2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.48, 0.57, 3.38),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Textures/Down/Top:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.45, 0.55, 0.56, 3.13, 3.29),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.958, 1.15), Vector2(1, 1), Vector2(0.958, 1.15), Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Textures/Down/Top:region_rect")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.37, 0.56, 3.27, 3.31),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(187.145, 2.94247, 193.427, 165.271), Rect2(187.145, 2.94247, 193.427, 165.271), Rect2(187.145, 165, 193.427, 165.271), Rect2(187.145, 165, 193.427, 165.271), Rect2(187.145, 2.94247, 193.427, 165.271)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Textures/Down:region_rect")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.49, 0.56, 3.2, 3.31),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(4.22964, 34.0001, 168.704, 147.491), Rect2(4.22964, 34.0001, 168.704, 147.491), Rect2(4.23, 203, 168.704, 147.491), Rect2(4.23, 203, 168.704, 147.491), Rect2(4.22964, 34.0001, 168.704, 147.491)]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1.01),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_spawn_coin"
}]
}

[sub_resource type="Animation" id="Animation_dv1e4"]
resource_name = "_idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Textures:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1.5, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1.05), Vector2(1, 1), Vector2(1, 1.05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Textures/Down/Top:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7, 1.5, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0349066, 0.0, -0.0349066]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Textures/Down/Top:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7, 1.5, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-82, -77.6513), Vector2(-82, -79.651), Vector2(-82, -77.6513), Vector2(-82, -79.651)]
}

[sub_resource type="Animation" id="Animation_njg11"]
resource_name = "spawn"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Textures:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.15, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.15, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.23684, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpawnLight:energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.25, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 4.0, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SpawnLight:texture_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.25, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.5, 1.3]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SpawnParticles:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("DustParticles:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("DustParticles:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.15),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, 75)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Textures:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -178), Vector2(0, 49), Vector2(0, 39.722), Vector2(0, 49)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Textures/Down/Top:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.2, 0.35, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-0.349066, 0.0, -0.10472, 0.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Textures/Down/Top:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-91.94, -78.264), Vector2(-82, -77.6513)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k03oj"]
_data = {
&"RESET": SubResource("Animation_o0wg1"),
&"_death": SubResource("Animation_mcjt5"),
&"_giving_coin": SubResource("Animation_5023s"),
&"_idle": SubResource("Animation_dv1e4"),
&"spawn": SubResource("Animation_njg11")
}

[sub_resource type="Animation" id="Animation_nygsp"]
resource_name = "_receive_damage_general"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Textures/Down:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Textures/Down:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.109804, 0.0705882, 0.0588235, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Textures:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 49), Vector2(-10, 49), Vector2(0, 49)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Textures/Down/Top:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7ngb3"]
_data = {
&"_receive_damage_general": SubResource("Animation_nygsp")
}

[sub_resource type="Curve" id="Curve_gt08e"]
_data = [Vector2(0, 0.147368), 0.0, 0.0, 0, 0, Vector2(0.368132, 0.694737), 0.0, 0.0, 0, 0, Vector2(0.983517, 0.115789), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_pckpb"]
offsets = PackedFloat32Array(0, 0.245033, 1)
colors = PackedColorArray(0.351563, 0.351563, 0.351563, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Curve" id="Curve_ia0ev"]
_limits = [0.0, 0.1, 0.0, 1.0]
_data = [Vector2(0, 0.0175824), 0.0, 0.0, 0, 0, Vector2(0.505155, 0.1), 0.0163989, 0.0163989, 0, 0, Vector2(1, 0.00549448), -0.368232, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_e7pea"]
offsets = PackedFloat32Array(0, 0.0783133, 0.379518, 0.572289, 0.76506, 1)
colors = PackedColorArray(0.874968, 0.604514, 0.563407, 0, 1, 1, 1, 1, 0.851918, 0.618979, 0.924945, 1, 0.954472, 0.794962, 0.466424, 1, 0.73367, 0.921388, 0.913637, 1, 1, 1, 1, 0)

[node name="WoodenChest" type="CharacterBody2D"]
position = Vector2(102, 106)
script = ExtResource("1_ah1ba")
resource_value = 25
seconds_per_coin = 4.0

[node name="AllyHUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AllyNameAndLevelLabel" type="Label" parent="AllyHUD"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 163.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 25
text = "NAME Level 1"

[node name="AllyUpgradeMenu" parent="AllyHUD" instance=ExtResource("2_epg0r")]
unique_name_in_owner = true
visible = false
layout_mode = 1
offset_left = 211.0
offset_top = 4.0
offset_right = 211.6
offset_bottom = 4.47998

[node name="SelectAllyBtn" type="TextureButton" parent="AllyHUD"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.211765)
custom_minimum_size = Vector2(192, 180)
layout_mode = 0
offset_left = 3.0
offset_top = 1.0
offset_right = 195.0
offset_bottom = 181.0

[node name="ResourceProviderStateMachine" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_p5bas")
metadata/_custom_type_script = "uid://bpfbritys5raj"

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(-2, 29)
scale = Vector2(1.23684, 1)
texture = ExtResource("3_pspge")

[node name="Textures" type="Node2D" parent="."]
position = Vector2(0, 49)
scale = Vector2(1, 1.00071)

[node name="Down" type="Sprite2D" parent="Textures"]
position = Vector2(-1, -28)
scale = Vector2(1, 1.01756)
texture = ExtResource("4_fq48q")
offset = Vector2(-3, -22)
region_enabled = true
region_rect = Rect2(4.22964, 34.0001, 168.704, 147.491)

[node name="Top" type="Sprite2D" parent="Textures/Down"]
position = Vector2(-82, -77.6513)
texture = ExtResource("4_fq48q")
offset = Vector2(65, -9.75052)
region_enabled = true
region_rect = Rect2(187.145, 2.94247, 193.427, 165.271)

[node name="CPUParticles2D" type="CPUParticles2D" parent="Textures/Down"]
position = Vector2(-5, -33.3601)
amount = 40
texture = ExtResource("5_b4i84")
emission_shape = 3
emission_rect_extents = Vector2(40, 1)
direction = Vector2(0, -1)
gravity = Vector2(0, 10)
initial_velocity_min = 115.6
initial_velocity_max = 115.6
linear_accel_min = -80.52
linear_accel_max = -80.52
scale_amount_curve = SubResource("Curve_m2yvq")
color_ramp = SubResource("Gradient_jppvw")

[node name="BodyCollShape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-29.5, -50.5)
shape = SubResource("RectangleShape2D_0gq5y")

[node name="PhysicalContactCollShape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(66, -29.5)
shape = SubResource("RectangleShape2D_4i6t7")

[node name="CoinDropTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="StateAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_k03oj")
}
autoplay = "spawn"

[node name="ReceiveDamage" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7ngb3")
}

[node name="DustParticles" type="CPUParticles2D" parent="."]
position = Vector2(10, 75)
emitting = false
amount = 20
texture = ExtResource("6_hl5cj")
lifetime = 0.8
one_shot = true
speed_scale = 1.2
explosiveness = 0.7
emission_shape = 3
emission_rect_extents = Vector2(60, 1)
direction = Vector2(0, -1)
spread = 15.0
gravity = Vector2(0, -60)
initial_velocity_min = 433.73
initial_velocity_max = 433.73
angular_velocity_min = 277.59
angular_velocity_max = 277.59
scale_amount_curve = SubResource("Curve_gt08e")
color_ramp = SubResource("Gradient_pckpb")

[node name="SpawnLight" type="PointLight2D" parent="."]
visible = false
position = Vector2(0, 27.25)
color = Color(0.392157, 0.627451, 0.4, 1)
energy = 0.0
texture = ExtResource("7_uu5hv")
texture_scale = 1.3

[node name="SpawnParticles" type="CPUParticles2D" parent="."]
position = Vector2(4, 44.25)
emitting = false
amount = 20
lifetime = 0.8
one_shot = true
explosiveness = 0.9
emission_shape = 3
emission_rect_extents = Vector2(70, 1)
direction = Vector2(0, -1)
spread = 75.99
gravity = Vector2(0, -100)
initial_velocity_min = 357.2
initial_velocity_max = 357.2
angular_velocity_min = 269.16
angular_velocity_max = 269.16
linear_accel_min = 31.78
linear_accel_max = 31.78
scale_amount_curve = SubResource("Curve_ia0ev")
color_ramp = SubResource("Gradient_e7pea")
